Fix: Only apply scaling to images on small screens.

--- a/src/app/tiles/article/article.component.scss
+++ b/src/app/tiles/article/article.component.scss
@@ -1,7 +1,11 @@
+@import "../../../media-queries";
+
 :host {
-  display: grid;
-  align-items: center;
-  padding: 0 1.5em
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 1.5em;
+  //margin: 0 15%;
 }
 
 a {
@@ -18,4 +22,28 @@ p {
 
 h4 {
   margin-bottom: 0.1em;
+}
+
+img {
+  @include media('small'){
+    /* Prevent images from overflowing. */
+    max-width: 100%;
+    height: auto;
+    /* Removed from the normal document flow. Stays at the default position which is its parent div. */
+    position: absolute;
+    /* Set coordinates to zero. The element now needs to know which parent is its reference point for its position. */
+    left: 0;
+    top: 0;
+  }
+}
+
+#image-container {
+  @include media('small') {
+    /* Container for absolute positioned elements. */
+    position: relative;
+    /* Sets the aspect ratio to 16:9 -> A width of " " % of the parent container. */
+    padding-top: 56.25%;
+    /* Images that have a bigger height than the parent container are cropped. */
+    overflow: hidden;
+  }
 }
